Location dot, links, console.log
- Replaced the location pin emoji with the location dot icon from font awesome
- Removed console.log(apiUrl)
- Replaced the link to insta with the link to GitHub repo, changed the copy for the link
- Added target="_blank" to all links

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="src/styles.css" />
+    <script src="https://kit.fontawesome.com/db59d2bac3.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   </head>
   <body>
@@ -48,7 +49,7 @@
                   id="current-location-button"
                   title="Current location"
                 >
-                  📍
+                  <i class="fa-solid fa-location-dot fa-lg"></i>
                 </button>
               </div>
             </div>
@@ -126,15 +127,15 @@
       Background image: photo by
       <a
         href="https://unsplash.com/@davies_designs?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
-        >Davies Designs Studio</a
+        target="_blank">Davies Designs Studio</a
       >
       on
       <a
         href="https://unsplash.com/?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
-        >Unsplash</a
+        target="_blank">Unsplash</a
       >
-      <br />This page was built by
-      <a href="https://www.instagram.com/lilac_glue/">Olga Tverdomed</a>
+      <br />Open-source code by
+      <a href="https://github.com/Glannys/weather-app-she-codes-plus" target="_blank">Olga Tverdomed</a>
     </footer>
     <script src="src/index.js"></script>
   </body>
