--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <div class="col-sm-6">
               <ul>
                 <li class=humidity-wind>Humidity: <span id="humidity"></span>%</li>
-                <li class=humidity-wind>Wind: <span id="wind"></span> </span>kph</li>
+                <li class=humidity-wind>Wind: <span id="wind"></span> </span>m/s</li>
               </ul>
             </div>
           </div>
