Footer text and formatting
1) All photographers credited
2) Formatting changed, because otherwise you cannot read the text on winter background

--- a/index.html
+++ b/index.html
@@ -123,19 +123,41 @@
         </div>
       </div>
     </div>
-    <footer>
+        <footer>
       Background image: photo by
       <a
         href="https://unsplash.com/@davies_designs?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
-        target="_blank">Davies Designs Studio</a
+        target="_blank"
+        >Davies Designs Studio (default)</a
+      >,   <a
+        href="https://unsplash.com/@frankiefoto?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash"
+        target="_blank"
+        >frank mckenna (summer)</a
+      >, <a
+        href="https://unsplash.com/@johnprice?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash"
+        target="_blank"
+        >John Price (spring)</a
+      >, <a
+        href="https://unsplash.com/@jaanus?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash"
+        target="_blank"
+        >Jaanus Jagomägi (winter)</a
+      > and <a
+        href="https://unsplash.com/@klingebeil?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash"
+        target="_blank"
+        >Johannes Klingebiel (fall)</a
       >
       on
       <a
         href="https://unsplash.com/?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
-        target="_blank">Unsplash</a
+        target="_blank"
+        >Unsplash</a
       >
       <br />Open-source code by
-      <a href="https://github.com/Glannys/weather-app-she-codes-plus" target="_blank">Olga Tverdomed</a>
+      <a
+        href="https://github.com/Glannys/weather-app-she-codes-plus"
+        target="_blank"
+        >Olga Tverdomed</a
+      >
     </footer>
     <script src="src/index.js"></script>
   </body>
