--- a/index.html
+++ b/index.html
@@ -70,7 +70,9 @@
             </div>
           </div>
           <div class="weather-temperature">
-            <span class="current-weather-image">☀ </span>
+            <span class="current-weather-image"
+              ><img src="https://openweathermap.org/img/wn/10d@2x.png" />
+            </span>
             <span class="current-temperature">
               <span id="temp-value"></span> °<a href="#" id="celsius-link">C</a>
               | <a href="#" id="fahrenheit-link">F</a>
