Made the current weather icon dynamic
The weather icon (#current-weather-image) now will change to match the weather in the selected city.

--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
             </div>
           </div>
           <div class="weather-temperature">
-            <span class="current-weather-image"
-              ><img src="https://openweathermap.org/img/wn/10d@2x.png" />
+           <span id="current-weather-image"
+              >
             </span>
             <span class="current-temperature">
               <span id="temp-value"></span> °<a href="#" id="celsius-link">C</a>
