Updated the footer content, hid the forecast section in the comments

--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
               | <a href="#" id="fahrenheit-link">F</a>
             </span>
           </div>
+          <!--
           <div class="row text-center">
             <div class="col xs-4 col-sm-2">
               <div class="week-day">Mon</div>
@@ -122,6 +123,7 @@
               </div>
             </div>
           </div>
+           -->
         </div>
       </div>
     </div>
@@ -154,11 +156,19 @@
         target="_blank"
         >Unsplash</a
       >
-      <br />Open-source code by
+      <br />This project was coded by <a
+        href="https://github.com/Glannys/"
+        target="_blank"
+        >Olga Tverdomed</a
+      >, is
       <a
         href="https://github.com/Glannys/weather-app-she-codes-plus"
         target="_blank"
-        >Olga Tverdomed</a
+        >open-sourced on GitHub</a
+      > and hosted on <a
+        href="https://olga-weather.netlify.app"
+        target="_blank"
+        >Netlify</a
       >
     </footer>
     <script src="src/index.js"></script>
