Replaced html with JS in the forecast part

--- a/index.html
+++ b/index.html
@@ -84,105 +84,11 @@
             </span>
           </div>
 
-          <div class="weather-forecast">
-            <div class="weather-forecast-day">
-              <div class="week-day">Mon</div>
-              <div class="weather-image">☁</div>
-              <div class="temperature-range">
-                <div class="max-temp">15º</div>
-                <div class="min-temp">9º</div>
-              </div>
-            </div>
-            <div class="weather-forecast-day">
-              <div class="week-day">Mon</div>
-              <div class="weather-image">☁</div>
-              <div class="temperature-range">
-                <div class="max-temp">15º</div>
-                <div class="min-temp">9º</div>
-              </div>
-            </div>
-            <div class="weather-forecast-day">
-              <div class="week-day">Mon</div>
-              <div class="weather-image">☁</div>
-              <div class="temperature-range">
-                <div class="max-temp">15º</div>
-                <div class="min-temp">9º</div>
-              </div>
-            </div>
-            <div class="weather-forecast-day">
-              <div class="week-day">Mon</div>
-              <div class="weather-image">☁</div>
-              <div class="temperature-range">
-                <div class="max-temp">15º</div>
-                <div class="min-temp">9º</div>
-              </div>
-            </div>
-            <div class="weather-forecast-day">
-              <div class="week-day">Mon</div>
-              <div class="weather-image">☁</div>
-              <div class="temperature-range">
-                <div class="max-temp">15º</div>
-                <div class="min-temp">9º</div>
-              </div>
-            </div>
-            <div class="weather-forecast-day">
-              <div class="week-day">Mon</div>
-              <div class="weather-image">☁</div>
-              <div class="temperature-range">
-                <div class="max-temp">15º</div>
-                <div class="min-temp">9º</div>
-              </div>
-            </div>
-            <!--
-          <div class="row text-center">
-            <div class="col xs-4 col-sm-2">
-              <div class="week-day">Mon</div>
-              <div class="weather-image">☁</div>
-              <div class="temperature-range">
-                <span class="max-temp">19°</span>
-                <span class="min-temp">13°</span>
-              </div>
-            </div>
-              <div class="col xs-4 col-sm-2">
-              <div class="week-day">Tue</div>
-              <div class="weather-image">⛅</div>
-              <div class="temperature-range">
-                22° <span class="min-temp">15°</span>
-              </div>
-            </div>
-            <div class="col xs-4 col-sm-2">
-              <div class="week-day">Wed</div>
-              <div class="weather-image">☁</div>
-              <div class="temperature-range">
-                15° <span class="min-temp">9°</span>
-              </div>
-            </div>
-            <div class="col xs-4 col-sm-2">
-              <div class="week-day">Thu</div>
-              <div class="weather-image">☁</div>
-              <div class="temperature-range">
-                16° <span class="min-temp">10°</span>
-              </div>
-            </div>
-            <div class="col xs-4 col-sm-2">
-              <div class="week-day">Fri</div>
-              <div class="weather-image">⛅</div>
-              <div class="temperature-range">
-                17° <span class="min-temp">12°</span>
-              </div>
-            </div>
-            <div class="col xs-4 col-sm-2">
-              <div class="week-day">Sat</div>
-              <div class="weather-image">⛅</div>
-              <div class="temperature-range">
-                16° <span class="min-temp">12°</span>
-              </div>
-            </div>
-           -->
-          </div>
+          <div class="weather-forecast" id="forecast"></div>
         </div>
       </div>
     </div>
+
     <footer>
       Background image: photo by
       <a
